--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,6 @@
-* {
-  font-family: sans-serif;
-}
+@import 'vars';
+@import 'app';
+@import 'folder';
+@import 'login';
+@import 'menu';
+@import 'photo';
