--- a/src/scss/_photo.scss
+++ b/src/scss/_photo.scss
@@ -13,7 +13,14 @@
   margin-left: padding(2);
 }
 
-.photo-details-name {
-  user-select: none;
+.photo-details {
   cursor: default;
+  display: flex;
+  height: padding(3);
+  align-items: center;
+  & > :last-child {
+    margin-left: padding(0.5);
+    flex-grow: 1;
+    font-size: 1rem;
+  }
 }
