--- a/src/scss/_folder.scss
+++ b/src/scss/_folder.scss
@@ -8,3 +8,13 @@
 .fa--spacer {
   width: padding(2);
 }
+
+.folder-name {
+  display: inline-block;
+  cursor: default;
+  align-items: center;
+  & > :last-child {
+    margin-left: padding(0.5);
+    font-size: 1rem;
+  }
+}
